fix: Push voted out behind header

--- a/frontend/src/components/VotedOutPanel/VotedOutPanel.css
+++ b/frontend/src/components/VotedOutPanel/VotedOutPanel.css
@@ -3,7 +3,7 @@
   position: sticky;
   bottom: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 1;
   height: 80px;
 }
 
